--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HOMEPAGE</title>
     <link rel="stylesheet" href="style.css">
     <!-- <script src="algorithms.js" defer></script> -->
     <!-- <script src="objectjs.js" defer></script> -->
